projects/nx/src/apps/*sso/authelia/security/allow-from-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authelia-from-traefik
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow ingress traffic from Traefik to Authelia pods on port 9091.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 9091
          protocol: TCP
